--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.17.3",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
+    "moment": "^2.29.1",
     "mongoose": "^6.2.6",
     "multer": "^1.4.4",
     "multer-s3": "^2.10.0",
@@ -27,4 +28,3 @@
     "nodemon": "^2.0.15"
   }
 }
-
